// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdrChip default matches snapshot 1`] = `
<button
  class="cdr-chip"
>
  tortilla chip
</button>
`;

exports[`CdrChip renders icon slots 1`] = `
<button
  class="cdr-chip"
>
  <span
    class="cdr-chip__icon-left"
  >
    🌮
  </span>
  tortilla chip
  <span
    class="cdr-chip__icon-right"
  >
    🍔
  </span>
</button>
`;
